feat: Implement graceful shutdown and enhanced logging in Main class
fix: Update IPTV GitHub raw link and start image URL in Constants

refactor: Improve file downloading mechanism in FileDownloader

refactor: Rewrite IPTV parsing logic to handle markdown format for countries and regions

docs: Add changelog for version 2.0.0 with major improvements and bug fixes

feat: Introduce MessageTemplates for better message formatting

feat: Add RedisManager for connection pooling and resource management

feat: Create TextUtils for text formatting and validation utilities

chore: Update local properties for bot token and username

chore: Add simplelogger properties for SLF4J logging configuration